fix some print layout issues

--- a/src/Footer.scss
+++ b/src/Footer.scss
@@ -3,4 +3,5 @@
 .app-footer {
   margin: $section-margin auto;
   text-align: center;
+  font-size: 0.9rem;
 }
